# boomerang

./: Cargo.toml  update_server.py
.github/workflows/: publish-binaries.yml
boomerang/: Cargo.toml
boomerang/src/: main.rs
boomerang_server/: Cargo.toml
boomerang_server/src/: main.rs
boomerang_server/website/: index.html
server/: Cargo.toml
server/website/: index.html
server_updater/: Cargo.toml
server_updater/src/: main.rs
src/: lib.rs
update_server/: Cargo.toml
website/: index.html  index.js
