[package]
name = "boomerang_server"
version = "0.1.0"
edition = "2021"

[dependencies]
boomeranglib = { path = "../" }
axum = { version = "0.7.4", features = ["multipart"] }
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
local-ip-address = "0.5.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6.2"
tracing = "0.1.40"
